Fix: alignment

--- a/frontend-react/src/container/Associates/Associates.scss
+++ b/frontend-react/src/container/Associates/Associates.scss
@@ -53,7 +53,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 500px;
+        width: 400px;
         margin: 2rem;
         padding: 0.5rem 1rem 1rem;
         border-radius: 0.5rem;
@@ -96,7 +96,10 @@
     }
 
   
-
+    ul {
+        align-self: flex-start;
+        margin-left: 2rem;
+    }
     a {
         display: block;
         text-decoration: none;
